# KalaData

./: .gitignore  CHANGES.txt  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  Windows_prerequisites.txt  build_quick_windows.bat  version.rc.in
include/: command.hpp  compress.hpp  core.hpp
include/compression/: compress.hpp  decompress.hpp
include/core/: command.hpp  core.hpp
src/: command.cpp  compress.cpp  core.cpp  main.cpp
src/compression/: compress.cpp  decompress.cpp
src/core/: command.cpp  core.cpp
